// taken from https://grpc-ecosystem.github.io/grpc-gateway/docs/tutorials/simple_hello_world/

syntax = "proto3";

package greet;

service Greeter
{
	rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest
{
	string name = 1;
}

message HelloReply
{
	string msg = 1;
}